--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-
+<!--Start of Housecallpro Online booking button--> <button data-token="57b117a30c214cf699b3c2108135e1ac" data-orgname="Consumers-Electric-NM" class="hcp-button" onClick="HCPWidget.openModal()"> Book online </button> <script async src="https://online-booking.housecallpro.com/script.js?token=57b117a30c214cf699b3c2108135e1ac&orgName=Consumers-Electric-NM"> </script> <!--End of Housecallpro Online booking button-->
